[gd_scene load_steps=6 format=3 uid="uid://cwd7lvglbc2pd"]

[ext_resource type="Script" path="res://Characters/torpedo.gd" id="1_rcpos"]
[ext_resource type="AudioStream" uid="uid://l3lvmvb0fp4w" path="res://audio/weirdpulse.wav" id="3_v1rib"]
[ext_resource type="AudioStream" uid="uid://djkyrpkmomln2" path="res://audio/vanish.wav" id="4_bcg26"]
[ext_resource type="Texture2D" uid="uid://dvbjnulsuh267" path="res://white blur.png" id="4_fiy7t"]
[ext_resource type="Texture2D" uid="uid://eu8s5wyu5edx" path="res://Characters/Simple Shapes/Circle.png" id="5_q51be"]

[node name="torpedo" type="Area2D" groups=["torpedo"]]
script = ExtResource("1_rcpos")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="." groups=["torpedo"]]
texture_filter = 1
position = Vector2(8, 0)
polygon = PackedVector2Array(-16, 0, -8, -8, 0, 0, -8, 8)

[node name="Timer" type="Timer" parent="CollisionShape2D"]
wait_time = 14.58
autostart = true

[node name="trail" type="CPUParticles2D" parent="."]
modulate = Color(0.609489, 0.60664, 0, 1)
position = Vector2(-0.896606, 0.316761)
amount = 500
lifetime = 10.0
randomness = 0.47
lifetime_randomness = 0.9
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)

[node name="PointLight2D" type="PointLight2D" parent="trail"]
position = Vector2(0.896606, -0.316761)
color = Color(0.736385, 0.158439, 2.88785e-07, 1)
energy = 3.0
shadow_enabled = true
texture = ExtResource("4_fiy7t")
texture_scale = 10.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_v1rib")
volume_db = 8.0
autoplay = true
max_distance = 20000.0
attenuation = 0.933035

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bcg26")
volume_db = 8.0
max_distance = 20000.0

[node name="explosion" type="CPUParticles2D" parent="."]
modulate = Color(0.728976, 0, 0.0391784, 1)
emitting = false
amount = 3000
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 0.2
randomness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 191.92
initial_velocity_max = 393.94

[node name="Circle" type="Sprite2D" parent="."]
modulate = Color(0.737255, 0.156863, 0, 1)
position = Vector2(-1.52588e-05, 0)
scale = Vector2(0.01, 0.01)
texture = ExtResource("5_q51be")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="CollisionShape2D/Timer" to="." method="_on_timer_timeout"]
